NexusCommand: update tabcomplete